# Easy2

./: AUTHORS  README.md  easy2.nsi  meson.build  win64.ini
.github/workflows/: main.yml
src/: easy2  easy_sound.cpp  easy_wav.hpp  meson.build
